--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--1st para-->
 <div class="container ">
     <div class="row">
-    <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="../../../media/info/p2.jpeg"></div>
+    <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="images/p2.jpeg"></div>
     <div class=" col-lg-6 col-sm-12 col-xs-12"><h6 class="msg">
         <b>Cardiovascular diseases (CVDs) are a group of disorders of the
         heart and blood vessels. These diseases include the following:</b><br><br>
@@ -83,7 +83,7 @@ Other risk factors which can't be controlled include:</b><br>
 <b>Although these factors can't be controlled, they need to be
 monitored carefully.</b><br>
     </h6></div>
- <div class="col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="../../../media/info/p3.jpeg"></div>
+ <div class="col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="images/p3.jpeg"></div>
 </div>
 </div>
 
@@ -93,7 +93,7 @@ monitored carefully.</b><br>
 <!--Third para-->
 <div class="container">
     <div class="row">
-        <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="../../../media/info/p4.jpeg"></div>
+        <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="images/p4.jpeg"></div>
 <div class="col-lg-6 col-sm-12 col-xs-12"><h6 class="msg">
     <b>Often, there are no symptoms of the underlying disease of the
     blood vessels. A heart attack or stroke may be the first warning of 
@@ -161,7 +161,7 @@ diseases can include:</b><br><br>
 -Holter Monitoring.<br><br>
 -Stress Test<br>
     </h6></div>
- <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="../../../media/info/p5.jpeg"></div>
+ <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="images/p5.jpeg"></div>
 
 </div>
 </div>
@@ -173,7 +173,7 @@ diseases can include:</b><br><br>
 <!--5th para-->
 <div class="container">
     <div class="row">
- <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="../../../media/info/p6.jpeg"></div>
+ <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="images/p6.jpeg"></div>
 
 <div class="col-lg-6 col-sm-12 col-xs-12"><h6 class="msg">
     <b>Most of the major CVD risk factors can be controlled by leading a 
@@ -230,7 +230,7 @@ diseases can include:</b><br><br>
         type of heart disease you have and the extent of damage to your 
         heart.<br>
     </h6></div>
- <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="../../../media/info/p7.jpeg"></div>
+ <div class=" col-lg-6 col-sm-12 col-xs-12"><img class="img1" src="images/p7.jpeg"></div>
 
 </div>
 </div>
