--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@ diseases can include:</b><br><br>
 </div><br>
 <div class="msg">
 <b>If you are interested in reading in detail about CMDs, here are a few links that might help you:</b><br>
-<div style="font-style: italic;"> 1. <a href="https//www.healthline.com/heath/heart-disease" target="_blank">https//www.healthline.com/heath/heart-disease</a><br>
-2. <a href="https//www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)" target="_blank">https//www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)</a><br>
-3. <a href="https//www.world-heart-federation.org/" target="_blank">https//www.world-heart-federation.org/</a><br>
-4. <a href="https//www.hopkinsmedicine.org/health/conditions-and-diseases/rheumatic-heart-disease" target="_blank">https//www.hopkinsmedicine.org/health/conditions-and-diseases/rheumatic-heart-disease</a><br>
-5. <a href="https//www.mayoclinic.org/diseases-conditions/angina/symptoms-causes/syc-20369373" target="_blank">https//www.mayoclinic.org/diseases-conditions/angina/symptoms-causes/syc-20369373</a>
+<div style="font-style: italic;"> 1. <a href="https://www.healthline.com/heath/heart-disease" target="_blank">https://www.healthline.com/heath/heart-disease</a><br>
+2. <a href="https://www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)" target="_blank">https://www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)</a><br>
+3. <a href="https://www.world-heart-federation.org/" target="_blank">https://www.world-heart-federation.org/</a><br>
+4. <a href="https://www.hopkinsmedicine.org/health/conditions-and-diseases/rheumatic-heart-disease" target="_blank">https://www.hopkinsmedicine.org/health/conditions-and-diseases/rheumatic-heart-disease</a><br>
+5. <a href="https://www.mayoclinic.org/diseases-conditions/angina/symptoms-causes/syc-20369373" target="_blank">https://www.mayoclinic.org/diseases-conditions/angina/symptoms-causes/syc-20369373</a>
 </div>
 </div>
 </body>
